swiper, toastify, footer changes

--- a/css/footer.css
+++ b/css/footer.css
@@ -10,11 +10,12 @@ footer .footer-links-container {
   padding: 0 20px;
   display: flex;
   justify-content: space-between;
-  margin-top: 32px;
+  margin-top: 52px;
 }
 footer .footer-links-sections {
   display: flex;
   flex-direction: column;
+  gap: 3px;
 }
 footer .footer-links-sections p {
   font-size: 12px;
@@ -39,13 +40,28 @@ footer ul li {
   font-weight: bold;
 }
 footer .footer-bottom {
+  max-width: 80%;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 20px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-top: 32px;
 }
 footer .copyright-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  margin-bottom: 32px;
+}
+footer .copyright-container p {
+  color: gray;
+  font-size: 12px;
+  margin-bottom: 0.5rem;
+}
+footer .copyright-container span {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 10px;
+}
+footer hr {
+  width: 100%;
 }/*# sourceMappingURL=footer.css.map */
