--- a/css/slider.scss
+++ b/css/slider.scss
@@ -2,10 +2,8 @@
   background-color: var(--primary-blue);
   padding-top: 8px;
   padding-bottom: 24px;
-  overflow: hidden;
-  max-height: 450px;
 }
-.swiper-slide {
+/* .swiper-slide {
   img {
     width: 100%;
     height: 400px;
@@ -35,4 +33,52 @@
   background: url("/assets//icons/chevron-left.svg") no-repeat center;
   width: 15px;
   height: 15px;
+}
+ */
+
+.swiper {
+  width: 75%;
+  margin: 0 auto;
+  overflow: visible;
+  position: relative;
+}
+
+.swiper-slide {
+  width: fit-content;
+  display: flex;
+
+  img {
+    width: 100%;
+    height: 400px;
+  }
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  width: 45px;
+  padding: 40px 0;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  border-radius: 4px;
+}
+.swiper-button-prev {
+  left: 130px;
+}
+.swiper-button-next {
+  right: 133px;
+  &::after {
+    transform: rotate(180deg);
+  }
+}
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  content: '';
+  background: url('/assets//icons/chevron-left.svg') no-repeat center;
+  width: 15px;
+  height: 15px;
+}
+
+.swiper-pagination-bullet {
+  margin-top: 2rem;
+  padding-top: 0.5rem;
 }
