--- a/css/slider.css
+++ b/css/slider.css
@@ -2,44 +2,13 @@
   background-color: var(--primary-blue);
   padding-top: 8px;
   padding-bottom: 24px;
+  overflow: hidden;
+  max-height: 550px;
 }
 
-/* .swiper-slide {
-  img {
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-  }
-}
-.swiper-button-prev,
-.swiper-button-next {
-  width: 45px;
-  padding: 40px 0;
-  background: rgba(0, 0, 0, 0.7);
-  color: white;
-  border-radius: 4px;
-}
-.swiper-button-prev {
-  left: 130px;
-}
-.swiper-button-next {
-  right: 133px;
-  &::after {
-    transform: rotate(180deg);
-  }
-}
-.swiper-button-prev::after,
-.swiper-button-next::after {
-  content: "";
-  background: url("/assets//icons/chevron-left.svg") no-repeat center;
-  width: 15px;
-  height: 15px;
-}
- */
 .swiper {
-  width: 75%;
+  width: 100%;
   margin: 0 auto;
-  overflow: visible;
   position: relative;
 }
 
@@ -48,10 +17,12 @@
   width: -moz-fit-content;
   width: fit-content;
   display: flex;
+  gap: 1rem;
 }
 .swiper-slide img {
   width: 100%;
-  height: 400px;
+  height: 500px;
+  border-radius: 5px;
 }
 
 .swiper-button-prev,
@@ -80,9 +51,4 @@
   background: url("/assets//icons/chevron-left.svg") no-repeat center;
   width: 15px;
   height: 15px;
-}
-
-.swiper-pagination-bullet {
-  margin-top: 2rem;
-  padding-top: 0.5rem;
 }/*# sourceMappingURL=slider.css.map */
