--- a/css/slider.scss
+++ b/css/slider.scss
@@ -48,3 +48,31 @@
   width: 15px;
   height: 15px;
 }
+
+@media screen and (max-width: 768px) {
+  .products-slider {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .swiper {
+    max-width: 100%;
+    overflow: hidden;
+  }
+  .swiper-slide {
+    width: 100%;
+    img {
+      height: 300px;
+    }
+  }
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: 30px;
+    padding: 20px 0;
+  }
+  .swiper-button-prev {
+    left: 20px;
+  }
+  .swiper-button-next {
+    right: 20px;
+  }
+}
