--- a/css/header.css
+++ b/css/header.css
@@ -2,6 +2,7 @@ header {
   display: flex;
   width: 100%;
   background-color: var(--primary-blue);
+  position: relative;
 }
 header .content {
   display: flex;
@@ -92,4 +93,87 @@ header .content {
   left: 43%;
   top: 50%;
   transform: translate(-43%, -50%);
+}
+
+@media screen and (max-width: 768px) {
+  header .content {
+    display: none;
+  }
+  header .mobile-menu-button {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    padding: 1rem;
+    width: 100%;
+    height: 100%;
+  }
+  header .mobile-menu-button .close {
+    width: 25px;
+    display: none;
+    transition: all 0.3s ease-in-out;
+  }
+  header .mobile-menu {
+    position: absolute;
+    top: 50px;
+    padding: 1rem;
+    right: 0;
+    display: none;
+    justify-content: space-between;
+    width: 100%;
+    height: 30vh;
+    z-index: 4;
+    color: white;
+    background-color: var(--secondary-blue);
+    transition: all 0.3s ease-in-out;
+    -webkit-animation: mobile-menu 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
+    animation: mobile-menu 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
+  }
+  header .mobile-menu .mobile-menu-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 10px;
+    width: 100%;
+    height: 100%;
+    justify-content: space-between;
+  }
+  header .mobile-menu .mobile-menu-content .mobile-menu-item {
+    display: flex;
+    gap: 0.5rem;
+  }
+  header .mobile-menu .mobile-menu-content .mobile-menu-item .icon {
+    width: 25px;
+  }
+}
+.mobile-menu-button {
+  display: none;
+}
+
+.mobile-menu {
+  display: none;
+}
+
+@-webkit-keyframes mobile-menu {
+  0% {
+    transform: rotateX(70deg);
+    transform-origin: top;
+    opacity: 0;
+  }
+  100% {
+    transform: rotateX(0deg);
+    transform-origin: top;
+    opacity: 1;
+  }
+}
+@keyframes mobile-menu {
+  0% {
+    transform: rotateX(70deg);
+    transform-origin: top;
+    opacity: 0;
+  }
+  100% {
+    transform: rotateX(0deg);
+    transform-origin: top;
+    opacity: 1;
+  }
 }/*# sourceMappingURL=header.css.map */
