--- a/css/slider.css
+++ b/css/slider.css
@@ -51,4 +51,32 @@
   background: url("/assets//icons/chevron-left.svg") no-repeat center;
   width: 15px;
   height: 15px;
+}
+
+@media screen and (max-width: 768px) {
+  .products-slider {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .swiper {
+    max-width: 100%;
+    overflow: hidden;
+  }
+  .swiper-slide {
+    width: 100%;
+  }
+  .swiper-slide img {
+    height: 300px;
+  }
+  .swiper-button-prev,
+.swiper-button-next {
+    width: 30px;
+    padding: 20px 0;
+  }
+  .swiper-button-prev {
+    left: 20px;
+  }
+  .swiper-button-next {
+    right: 20px;
+  }
 }/*# sourceMappingURL=slider.css.map */
