--- a/css/products.scss
+++ b/css/products.scss
@@ -20,6 +20,10 @@
   grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
   border: 1px solid lightgray;
 }
+.best-seller-swiper {
+  display: flex;
+  border: 1px solid lightgray;
+}
 .product {
   display: flex;
   flex-direction: column;
