--- a/css/slider.css
+++ b/css/slider.css
@@ -79,4 +79,11 @@
   .swiper-button-next {
     right: 20px;
   }
+}
+.mySwiper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  border-right: 1px solid lightgray;
 }/*# sourceMappingURL=slider.css.map */
