--- a/css/slider.scss
+++ b/css/slider.scss
@@ -76,3 +76,11 @@
     right: 20px;
   }
 }
+
+.mySwiper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  border-right: 1px solid lightgray;
+}
