--- a/css/slider.css
+++ b/css/slider.css
@@ -39,7 +39,7 @@
 }
 
 .swiper-button-next {
-  right: 133px;
+  right: 130px;
 }
 .swiper-button-next::after {
   transform: rotate(180deg);
@@ -48,7 +48,45 @@
 .swiper-button-prev::after,
 .swiper-button-next::after {
   content: "";
-  background: url("/assets//icons/chevron-left.svg") no-repeat center;
+  background: url("/assets/icons/chevron-left.svg") no-repeat center;
+  width: 15px;
+  height: 15px;
+}
+
+.best-seller-container {
+  position: relative;
+}
+.best-seller-container .mySwiper {
+  width: 100%;
+  height: 100%;
+  border-right: 1px solid lightgray;
+  overflow: hidden;
+}
+.best-seller-container .swiper-best-button-prev,
+.best-seller-container .swiper-best-button-next {
+  position: absolute;
+  width: 45px;
+  padding: 40px 0;
+  background: rgb(148, 148, 148);
+  color: white;
+  border-radius: 4px;
+  z-index: 10;
+}
+.best-seller-container .swiper-best-button-prev {
+  left: -50px;
+  top: 50%;
+}
+.best-seller-container .swiper-best-button-next {
+  right: -50px;
+  top: 50%;
+}
+.best-seller-container .swiper-best-button-next::after {
+  transform: rotate(180deg);
+}
+.best-seller-container .swiper-best-button-prev::after,
+.best-seller-container .swiper-best-button-next::after {
+  content: "";
+  background: url("/assets/icons/triangle.svg") no-repeat center;
   width: 15px;
   height: 15px;
 }
@@ -79,11 +117,4 @@
   .swiper-button-next {
     right: 20px;
   }
-}
-.mySwiper {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  overflow: hidden;
-  border-right: 1px solid lightgray;
 }/*# sourceMappingURL=slider.css.map */
