--- a/css/slider.scss
+++ b/css/slider.scss
@@ -36,7 +36,7 @@
   left: 130px;
 }
 .swiper-button-next {
-  right: 133px;
+  right: 130px;
   &::after {
     transform: rotate(180deg);
   }
@@ -44,9 +44,47 @@
 .swiper-button-prev::after,
 .swiper-button-next::after {
   content: '';
-  background: url('/assets//icons/chevron-left.svg') no-repeat center;
+  background: url('/assets/icons/chevron-left.svg') no-repeat center;
   width: 15px;
   height: 15px;
+}
+
+.best-seller-container {
+  position: relative;
+  .mySwiper {
+    width: 100%;
+    height: 100%;
+    border-right: 1px solid lightgray;
+    overflow: hidden;
+  }
+  .swiper-best-button-prev,
+  .swiper-best-button-next {
+    position: absolute;
+    width: 45px;
+    padding: 40px 0;
+    background: rgb(148, 148, 148);
+    color: white;
+    border-radius: 4px;
+    z-index: 10;
+  }
+  .swiper-best-button-prev {
+    left: -50px;
+    top: 50%;
+  }
+  .swiper-best-button-next {
+    right: -50px;
+    top: 50%;
+    &::after {
+      transform: rotate(180deg);
+    }
+  }
+  .swiper-best-button-prev::after,
+  .swiper-best-button-next::after {
+    content: '';
+    background: url('/assets/icons/triangle.svg') no-repeat center;
+    width: 15px;
+    height: 15px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -75,12 +113,4 @@
   .swiper-button-next {
     right: 20px;
   }
-}
-
-.mySwiper {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  overflow: hidden;
-  border-right: 1px solid lightgray;
 }
